[package]
name    = "CRABTOOTH"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bluetooth
btleplug = "0.11"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Terminal UI
crossterm  = "0.27"
ratatui    = "0.26"

# Utilities
uuid     = { version = "1", features = ["v4"] }
anyhow   = "1"
chrono   = "0.4"
